--- a/about.html
+++ b/about.html
@@ -453,7 +453,7 @@ Author URL: http://w3layouts.com
                 </div>
                 <!-- copyright -->
                 <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2022 All rights reserved. Design by
-                    <a href="https://w3layouts.com/" target="_blank">
+                    <a href="https://www.instagram.com/rudragulia/" target="_blank">
                         Rudra Gulia</a>
                 </p>
                 <!-- //copyright -->
